Fixed image wrapping with text

--- a/assets/themes/tom/css/screen.css
+++ b/assets/themes/tom/css/screen.css
@@ -274,6 +274,8 @@ ul.posts span {
 .post img {
     max-width: 97%;
     height: auto;
+    display: block;
+    margin: 1em;
 }
 
   /* terminal */
